# hsExprTest

./: .ghci  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Data-Data-Collect.html  Data-PartialOrder.html  Data-Tuple-TH-Curry.html  ISMUNI.md  ISMUNI_backed.md  LICENSE  Makefile  README.md  Test-Expr-Config.html  Test-Expr-Modifiers.html  Test-Expr-Property.html  Test-Expr-Reflection.html  Test-Expr-Types.html  Test-Expr-Utils.html  Test-Expr.html  Test-Journal.html  Test-QuickCheck-Convertible.html  Test-QuickCheck-Literal.html  Test-QuickCheck-Range.html  Test-QuickCheck-Union.html  Test-Testable-Data.html  Test-Testable-IO-Base.html  Test-Testable-IO-NoMonad.html  Test-Testable-IO.html  default.nix  doc-index-47.html  doc-index-60.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  (+28 more)
.github/workflows/: build.yml  haskell.yml
doc/: checkers.md  concepts.md  hs.md  questions.md
examples/: Solution.hs  Student.hs  Test-hiord.hs  Test-props.hs  Test.hs  anno-1.ok.hs  anno-1.q.hs  bimap.1.ok.hs  bimap.3.ok.hs  bimap.4.nok.hs  bimap.q.hs  foldr.2.ok.hs  foldr.q.hs  funlist.q.hs  hs-bimap.2.ok.hs  hs-bimap.5.nok.hs  hs-bimap.q.hs  hs-foldr.1.ok.hs  hs-foldr.3.nok.q.hs  hs-foldr.4.nok.q.hs  hs-foldr.5.nok.hs  hs-foldr.q.hs  hs-funlist.1.ok.hs  hs-rebind.q.hs  hs-safety.q.hs  hs-simple.1.ok.hs  hs-simple.2.nok.hs  hs-simple.q.hs  hs-typecmp-a.q.hs  hs-typecmp-simple.3.nok  hs-typecmp-simple.q.hs  hs-wrap1.1.ok.hs  hs-wrap1.2.ok.hs  hs-wrap1.q.hs  hs-wrap2.1.ok.hs  hs-wrap2.2.nok.hs  hs-wrap2.q.hs  hsstring-foo.q.hs  hstype-simple.1.ok  hstype-simple.2.nok  (+16 more)
exec/: Main.hs  Service.hs  UI.hs  serviceProxy.cpp
exec/Compat/: Read.hs
ext/bricks/: brick-fs  brick-proc  brick-string
frag/: .envrc  README.md  init.sh  yearly.make
frag/common/: Main.hs  TestSpec.hs  compile  main  mkreflect.pl
frag/support/: Student.hs  mkassignment  mktagmap.sh  run_tests
hsExprTest/: Test-Expr-Modifiers.html  Test-Expr-Reflection.html  Test-Expr-Types.html  Test-Expr.html  Test-QuickCheck-Range.html  Test-QuickCheck-Union.html  doc-index-47.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-H.html  doc-index-K.html  doc-index-L.html  doc-index-N.html  doc-index-R.html  doc-index.html
qce/: Modifiers.hs
src/: Config.hs  Files.hs  PrettyPrint.hs  Result.hs  Testing.hs  Types.hs
src/Testing/: Arguments.hs  Data.hs  DataTypes.hs  Limiting.hs  Test.hs
src/Types/: Arguments.hs  Comparing.hs  Curry.hs  Formating.hs  Parser.hs  Processing.hs  TH.hs  TypeExpression.hs
src/core/: .flake8  README.md  admin.py  cache.py  cgroup.py  config.hpp  config.py  db.py  evalconf.py  fd.hpp  fun.hpp  functor.py  limit.py  main.py  service.cpp  signalfd.hpp  testenv.py  work.hpp
src/hs/: .ghci  LICENSE  README.md  driver  evalconf.py  hsExprTest.cabal
src/hs/comparer/: Main.hs  UI.hs
src/hs/testlib/: Files.hs  Result.hs  Testing.hs  Types.hs
src/hs/testlib/Control/Monad/Reader/: Fail.hs  Generalized.hs
src/hs/testlib/Data/: PartialOrder.hs
src/hs/testlib/Data/Tuple/TH/: Curry.hs  GenCurry.hs
src/hs/testlib/Test/: Expr.hs  Journal.hs
src/hs/testlib/Test/Expr/: Config.hs  Property.hs  Reflection.hs  Types.hs  TypesUnitTest.hs  Utils.hs
src/hs/testlib/Test/QuickCheck/: Convertible.hs  GenConvertible.hs  Range.hs
src/hs/testlib/Test/TH/: Expression.hs  Types.hs  Utils.hs
src/hs/testlib/Test/Testable/: Data.hs  IO.hs
src/hs/testlib/Test/Testable/IO/: Base.hs  NoMonad.hs
src/hs/testlib/Testable/: IO.hs
src/hs/testlib/Testable/IO/: Base.hs  NoMonad.hs
src/hs/testlib/Testing/: Arguments.hs  Assignment.hs  DataTypes.hs  Options.hs  Test.hs
src/hs/testlib/Text/: PrettyPrint.hs
src/hs/testlib/Types/: Parser.hs
src/hs/tests/: Harness.hs  Testlib.hs  types.hs  unit.hs
src/hs/tests/Test/Expr/: TypesTestUtils.hs  TypesUnitTest.hs
src/ispol/: config.yaml  config.yml  main.py
src/pyserv/: admin.py  config.py  functor.py  main.py  testenv.py
support/: HLint.hs
test/: checker  compr-cross.5.nok.hs  compr-cross.q.hs  driver  exp.nok.hs  exp.ok.hs  hiord-compiled.nok.hs  hiord-compiled.ok.hs  hiord-compiled.q.hs  hiord.nok.hs  hs-compr-cross.1.ok.hs  hs-compr-cross.2.ok.hs  hs-compr-cross.3.nok.hs  hs-compr-cross.4.nok.hs  hs-compr-cross.q.hs  hs-compr-var.1.ok.hs  hs-compr-var.2.nok.hs  hs-compr-var.3.nok.hs  hs-compr-var.q.hs  hs-exp.q.hs  hs-hiord-compiled.nok.hs  hs-hiord-compiled.ok.hs  hs-hiord.ok.hs  hs-hiord.q.hs  hs-layout.ok.hs  hs-layout.q.hs  hs-mono.ok.hs  hs-mono.q.hs  hs-pat-typed-coerce.q.hs  hs-pat-typed.q.hs  hs-pat-untyped.q.hs  hs-refl-fold.1.ok.hs  hs-refl-fold.3.ok.hs  hs-refl-fold.4.ok.hs  hs-refl-fold.6.nok.hs  hs-refl-fold.q.hs  hs-script.nok.hs  hs-simple-3.nok.hs  hs-simple-3.q.hs  hs-simple-4.ok.hs  (+20 more)
testing/jonas_expression_testing/: Config.hs  Files.hs  Main.hs  Makefile  Result.hs  Testing.hs  default.nix  expressionTesting.cabal  expressionTesting.nix  nixcheck.sh
testing/jonas_expression_testing/InteractiveImports/: DataTypes.hs  Limiting.hs
testing/jonas_expression_testing/Teacher/: Test.hs
testing/jonas_expression_testing/Test/: QuickCheck.hs
testing/jonas_expression_testing/Types/: Comparing.hs  Formating.hs  Parser.hs  Processing.hs  TypeExpression.hs
testing/jonas_expression_testing/examples/: Test-custom.hs  Test-hiord.hs  Test-props.hs
testing/jonas_expression_testing/exec/: Main.hs  Service.hs  UI.hs
testing/jonas_expression_testing/src/: Files.hs  Result.hs  Testing.hs
testing/jonas_expression_testing/src/InteractiveImports/: DataTypes.hs  Limiting.hs
testing/jonas_expression_testing/src/Testing/: DataTypes.hs  Test.hs
testing/jonas_expression_testing/src/Types/: Arguments.hs  Comparing.hs  Processing.hs
testing/jonas_expression_testing/tests/: OldBugs.hs
testing/jonas_expression_testing/wrap/: env.sh  expressionTesting.sh  lib
tests/: Basic.hs  Harness.hs  OldBugs.hs  Security.hs  Types.hs  basic.hs  security.hs  types.hs  unit.hs
wrap/: hsExprTest.sh  hsExprTestService.sh  lib
(+42 files in other folders)
