name:                hsExprTest
version:             0.1.4
description:
        This application allows to compare two types and compare two expressions by testing.
synopsis:           Expression Testing
category:           Testing
author:             Martin Jonáš <359542@mail.muni.cz>, Vladimír Štill <xstill@mail.muni.cz>
maintainer:         xstill@mail.muni.cz

cabal-version:      >= 1.9.2
build-type:         Simple
tested-with:        GHC == 7.8.3

flag service
    default: True
					
Library
  hs-source-dirs:   src

  build-depends:    base,
                    hint >= 0.3.3.4,
                    parsec >= 3.1.2,
                    containers >= 0.4.2.1,
                    directory >= 1.1.0.2,
                    random >= 1.0.1.1,
                    extensible-exceptions >= 0.1.1.4,
                    QuickCheck >= 2.7

  exposed-modules:    Types.TypeExpression
                      Types.Processing
                      Types.Parser
                      Types.Comparing
                      Types.Formating
                      Types.Arguments
                      Types.Curry
                      Config
                      Testing
                      Testing.Test
                      Testing.Limiting
                      Testing.DataTypes
                      Result
                      Files
					  
  ghc-options:        -O0
  extensions:         StandaloneDeriving
                      DeriveDataTypeable

Executable hsExprTest
  hs-source-dirs:   exec

  build-depends:    hsExprTest == 0.1.4,
                    base,
                    cmdlib >= 0.3.5

  ghc-options:      -O0
  main-is:          Main.hs
  other-modules:    UI

Executable hsExprTestService
  if !flag( service )
    buildable: False
  else
    build-depends:    hsExprTest == 0.1.4,
                      base,
                      directory,
                      cmdlib >= 0.3.5,
                      network >= 2.4

  hs-source-dirs:   exec

  ghc-options:      -O0

  main-is:          Service.hs
  other-modules:    Compat.Read
  extensions:       CPP

Test-Suite basic
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  main-is:          Basic.hs
  other-modules:    Harness

  build-depends:    base,
                    hsExprTest == 0.1.4,
                    Cabal >= 1.9.2

Test-Suite security
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  main-is:          Security.hs
  other-modules:    Harness

  build-depends:    base,
                    hsExprTest == 0.1.4,
                    Cabal >= 1.9.2
