name:                hsExprTest
version:             0.1.99
description:
        This application allows to compare two types and compare two expressions by testing.
synopsis:           Expression Testing
category:           Testing
author:             Martin Jonáš <359542@mail.muni.cz>, Vladimír Štill <xstill@mail.muni.cz>
maintainer:         xstill@mail.muni.cz
license:            BSD2
license-file:       LICENSE

cabal-version:      >= 1.9.2
build-type:         Simple
tested-with:        GHC == 7.8.3, GHC == 7.8.4, GHC == 7.10.1

flag service
    default: True
					
Library
  hs-source-dirs:   src, qce

  build-depends:    base >= 4.7,
                    hint >= 0.3.3.4 && < 0.4.3,
                    parsec >= 3.1.2,
                    containers >= 0.4.2.1,
                    directory >= 1.1.0.2,
                    random >= 1.0.1.1,
                    extensible-exceptions >= 0.1.1.4,
                    QuickCheck >= 2.7,
                    deepseq >= 1.2,
                    temporary >= 1.1,
                    filepath >= 1.3,
                    transformers >= 0.4

  exposed-modules:    Types
                      Types.Parser
                      Types.Arguments
                      Types.Curry
                      Testing
                      Testing.Test
                      Testing.Limiting
                      Testing.DataTypes
                      Testing.Data
                      Result
                      Files
                      Modifiers
                      PrettyPrint
					  
  ghc-options:        -O1 -threaded
  extensions:         StandaloneDeriving
                      DeriveDataTypeable

Executable hsExprTest
  hs-source-dirs:   exec

  build-depends:    hsExprTest == 0.1.99,
                    base,
                    cmdlib >= 0.3.5

  ghc-options:      -O1 -threaded -Wall
  main-is:          Main.hs
  other-modules:    UI

Executable hsExprTestService
  if !flag( service ) || os(windows)
    buildable: False
  else
    build-depends:    hsExprTest == 0.1.99,
                      base,
                      directory,
                      cmdlib >= 0.3.5,
                      network >= 2.4,
                      unix,
                      filepath,
                      clock >= 0.4 && < 0.4.1.1

  hs-source-dirs:   exec

  ghc-options:      -O1 -threaded

  main-is:          Service.hs
  extensions:       CPP

Test-Suite types
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  main-is:          types.hs

  build-depends:    base,
                    hsExprTest == 0.1.99,
                    Cabal >= 1.9.2


Test-Suite basic
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  main-is:          basic.hs
  other-modules:    Harness

  build-depends:    base,
                    hsExprTest == 0.1.99,
                    Cabal >= 1.9.2

Test-Suite security
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  main-is:          security.hs
  other-modules:    Harness

  build-depends:    base,
                    hsExprTest == 0.1.99,
                    Cabal >= 1.9.2

  ghc-options:      -O0 -threaded
