name:                hsExprTest
version:             2.99.0.0
description:
        This application allows to compare two types and compare two expressions by testing (using QuickCheck).

        See https://github.com/vlstill/hsExprTest/blob/master/README.md for usage details.
synopsis:           Expression Testing
category:           Testing
author:             Vladimír Štill <xstill@mail.muni.cz>
maintainer:         xstill@mail.muni.cz
license:            BSD2
license-file:       LICENSE
homepage:           https://github.com/vlstill/hsExprTest

cabal-version:      >= 1.22
build-type:         Simple
tested-with:        GHC == 8.2.1, GHC == 8.4.2

Library
  hs-source-dirs:   testlib

  build-depends:    base >= 4.10,
                    template-haskell >= 2.12 && < 2.14,
                    th-expand-syns >= 0.4.4,
                    QuickCheck >= 2.7,
                    deepseq >= 1.2,
                    random >= 1.1,
                    printf-mauke >= 0.7.0,
                    unix,
                    containers

  exposed-modules:    Test.Expr
                      Test.Expr.Types
                      Test.Expr.Property
                      Test.Expr.Utils
                      Test.QuickCheck.Range
                      Test.Testable.IO
                      Test.Testable.IO.Base
                      Test.Testable.IO.NoMonad
                      Test.Testable.Data

  default-language:   Haskell2010
  ghc-options:        -O1 -Wall -Wcompat -Wmissing-monadfail-instances -Wsemigroup -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wno-simplifiable-class-constraints

  default-extensions: MonadFailDesugaring

  if impl( ghc == 8.4.* )
    ghc-options:        -Werror

Test-Suite unit-hsExprTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests

    main-is:          unit.hs
    other-modules:    Test.Expr.TypesUnitTest
                      Test.Expr.TypesTestUtils
                      Testlib

    build-depends:    base, hsExprTest,
                      template-haskell,
                      printf-mauke

    default-language: Haskell2010
