name:                hsExprTest
version:             3.1.3.0
description:
        This application allows to compare two types and compare two expressions by testing (using QuickCheck).

        See https://github.com/vlstill/hsExprTest/blob/master/README.md for usage details.
synopsis:           Expression Testing
category:           Testing
author:             Vladimír Štill <xstill@mail.muni.cz>
maintainer:         xstill@mail.muni.cz
license:            BSD2
license-file:       LICENSE
homepage:           https://github.com/vlstill/hsExprTest

cabal-version:      >= 1.22
build-type:         Simple
tested-with:        GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5

Library
  hs-source-dirs:   testlib

  build-depends:    base >= 4.10,
                    template-haskell >= 2.12 && < 2.15,
                    th-expand-syns >= 0.4,
                    QuickCheck >= 2.7,
                    deepseq >= 1.2,
                    random >= 1.1,
                    printf-mauke >= 0.7.0,
                    json >= 0.9.3,
                    unix,
                    containers

  exposed-modules:    Test.Expr
                      Test.Expr.Types
                      Test.Expr.Property
                      Test.Expr.Utils
                      Test.Expr.Config
                      Test.Expr.Reflection
                      Test.QuickCheck.Range
                      Test.QuickCheck.Convertible
                      Test.Testable.IO
                      Test.Testable.IO.Base
                      Test.Testable.IO.NoMonad
                      Test.Testable.Data
                      Test.Journal
                      Data.PartialOrder
                      Data.Tuple.TH.Curry

  other-modules:
                      Data.Tuple.TH.GenCurry
                      Test.QuickCheck.GenConvertible

  default-language:   Haskell2010
  ghc-options:        -O1 -Wall -Wcompat -Wmissing-monadfail-instances -Wsemigroup -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wno-simplifiable-class-constraints

  default-extensions: MonadFailDesugaring

  if impl( ghc == 8.6.* )
    ghc-options:        -Werror

Test-Suite unit-hsExprTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests

    main-is:          unit.hs
    other-modules:    Test.Expr.TypesUnitTest
                      Test.Expr.TypesTestUtils
                      Testlib

    build-depends:    base, hsExprTest,
                      template-haskell,
                      printf-mauke

    default-language: Haskell2010
