name:                expressionTesting
version:             0.1.3
description:
        This application allows to compare two types and compare two expressions by testing.
synopsis:           Expression Testing
category:           Testing
author:             Martin Jonáš <359542@mail.muni.cz>, Vladimír Štill <xstill@mail.muni.cz>
maintainer:         359542@mail.muni.cz, xstill@mail.muni.cz

cabal-version:      >= 1.9.2
build-type:         Simple
tested-with:        GHC==7.8.3

flag service
    default: False
					
Library
  hs-source-dirs:   src

  build-depends:    base,
                    hint >= 0.3.3.4,
                    parsec >= 3.1.2,
                    containers >= 0.4.2.1,
                    directory >= 1.1.0.2,
                    random >= 1.0.1.1,
                    extensible-exceptions >= 0.1.1.4,
                    QuickCheck >= 2.7

  exposed-modules:    Types.TypeExpression
                      Types.Processing
                      Types.Parser
                      Types.Comparing
                      Types.Formating
                      Types.Arguments
                      Types.Curry
                      Config
                      Testing
                      Testing.Test
                      Testing.Limiting
                      Testing.DataTypes
                      Result
                      Files
					  
  ghc-options:        -O0
  extensions:         StandaloneDeriving
                      DeriveDataTypeable

Executable expressionTesting
  hs-source-dirs:   exec

  build-depends:    expressionTesting == 0.1.3,
                    base,
                    cmdlib >= 0.3.5

  ghc-options:      -O0
  main-is:          Main.hs
  other-modules:    UI

Executable expressionTestingService
  if !flag( service )
    buildable: False
  else
    build-depends:    expressionTesting == 0.1.3,
                      base >= 4.6,
                      directory,
                      cmdlib >= 0.3.5,
                      network >= 2.4

  hs-source-dirs:   exec

  ghc-options:      -O0

  main-is:          Service.hs

Test-Suite test-old-bugs
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  main-is:          OldBugs.hs

  build-depends:    base,
                    expressionTesting == 0.1.3,
                    Cabal >= 1.9.2
